# untitled-lyric-embedder

./: .gitignore  arguments.py  help.py  main.py  pyproject.toml  requirements.txt  todo.md
api/: apiCall.py  fuzzySearch.py  headers.py
handlers/: flac.py  mp3.py
misc/: apiCall.py  arguments.py  help.py  processLyrics.py  songMetadata.py
src/untitled-lyric-embedder/handlers/: flac.py
src/untitled_lyric_embedder/: main.py
src/untitled_lyric_embedder/api/: apiCall.py  fuzzySearch.py  headers.py
src/untitled_lyric_embedder/handlers/: flac.py  mp3.py
src/untitled_lyric_embedder/misc/: help.py  processLyrics.py
